src/test/ui/error-codes/E0277-2.stderr
error[E0277]: `*const u8` cannot be sent between threads safely
  --> $DIR/E0277-2.rs:16:5
   |
LL | fn is_send<T: Send>() { }
   |    -------    ---- required by this bound in `is_send`
...
LL |     is_send::<Foo>();
   |     ^^^^^^^^^^^^^^ `*const u8` cannot be sent between threads safely
   |
   = help: within `Foo`, the trait `std::marker::Send` is not implemented for `*const u8`
   = note: required because it appears within the type `Baz`
   = note: required because it appears within the type `Bar`
   = note: required because it appears within the type `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
